Changed QtNetworkAuth to cpprestsdk. Made simple classes to access data.

--- a/modules/app/CMakeLists.txt
+++ b/modules/app/CMakeLists.txt
@@ -5,14 +5,12 @@ find_package(Qt5
 		Core
 		Quick
 		QuickControls2
-		Network
-		NetworkAuth
 	REQUIRED
 	)
 
 include(${CMAKE_SOURCE_DIR}/Config.cmake)
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/ApiConfig.h.in @ONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/ApiConfig.h.in ApiConfig.h @ONLY)
 
 set(HEADERS
 	)
@@ -40,19 +38,25 @@ add_executable(${PROJECT_NAME}
 	${SOURCES}
 	${QML}
 	"qml.qrc"
+	${GENERATED_FILES}
 	)
 
 target_compile_definitions(${PROJECT_NAME}
 	PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>
 	)
 
+target_include_directories(${PROJECT_NAME}
+	PRIVATE
+		include
+		${CMAKE_CURRENT_BINARY_DIR}
+	)
+
 target_link_libraries(${PROJECT_NAME}
 	PRIVATE
+		libapi
 		Qt5::Core
 		Qt5::Quick
 		Qt5::QuickControls2
-		Qt5::Network
-		Qt5::NetworkAuth
 	)
 
 make_fs_source_group_for_target(${PROJECT_NAME})
