--- a/modules/app/include/ApiConfig.h.in
+++ b/modules/app/include/ApiConfig.h.in
@@ -5,5 +5,8 @@ namespace api
 
 constexpr auto ClientId = "@API_CLIENT_ID@";
 constexpr auto ClientSecret = "@API_CLIENT_SECRET@";
+constexpr auto AuthUri = "@API_AUTH_URI@";
+constexpr auto RedirectUri = "@API_REDIRECT_URI@";
+constexpr auto TokenUri = "@API_TOKEN_URI@";
 
 }
