Global refactoring. At least it works and even loads something.

--- a/modules/app/CMakeLists.txt
+++ b/modules/app/CMakeLists.txt
@@ -26,6 +26,7 @@ set(QML
 	qml/SearchFieldItem.qml
 	qml/TopBrowsePanel.qml
 	qml/UserButton.qml
+	qml/VideoRectangleDelegate.qml
 	qml/VideosView.qml
 	)
 
